# aiope

./: .gitignore  AGENTS.md  README.md  gradle.properties  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: android.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/aiope2/: AiopeApp.kt  AiopeForegroundService.kt  BootReceiver.kt  MainActivity.kt
app/src/main/kotlin/com/aiope2/navigation/: AiopeNavHost.kt  AiopeNavigation.kt
app/src/main/kotlin/com/aiope2/ui/: AiopeMain.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/xml/: file_paths.xml
build-logic/convention/src/main/kotlin/: AndroidFeatureConventionPlugin.kt  SpotlessConventionPlugin.kt
buildSrc/src/main/kotlin/: Configurations.kt
core-data/: build.gradle.kts
core-inference/: build.gradle.kts
core-inference/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
core-model/: build.gradle.kts
core-network/: build.gradle.kts
core-terminal/: build.gradle.kts
daemon/: go.mod  go.sum
docs/: AGENT_SYSTEM_SPEC.md  FUTURE-realtime-voice.md  free-data-apis.md
feature-chat/: build.gradle.kts
feature-chat/libs/: fluid-markdown-compose.aar  fluid-markdown.aar  markwon-core.aar  markwon-ext-latex.aar  markwon-ext-strikethrough.aar  markwon-ext-tables.aar  markwon-ext-tasklist.aar  markwon-html.aar  markwon-image.aar  markwon-inline-parser.aar  markwon-syntax-highlight.aar  universal-markdown-compose.aar
feature-remote/: build.gradle.kts
gradle/: libs.versions.toml
(+83 files in other folders)
